objects/myIfeDeliveries__x.object
<CustomObject>
    <description>myIfeDeliveries</description>
    <externalDataSource>Order_Status</externalDataSource>
    <externalName>myIfeDeliveries</externalName>
    <fields>
        <fullName>ACTUAL_SHIP_DATE__c</fullName>
        <description>ACTUAL_SHIP_DATE</description>
        <externalDeveloperName>ACTUAL_SHIP_DATE</externalDeveloperName>
        <label>ACTUAL_SHIP_DATE</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CUSTOMER_ID__c</fullName>
        <description>CUSTOMER_ID</description>
        <externalDeveloperName>CUSTOMER_ID</externalDeveloperName>
        <label>CUSTOMER_ID</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DELIVERY_ID__c</fullName>
        <description>DELIVERY_ID</description>
        <externalDeveloperName>DELIVERY_ID</externalDeveloperName>
        <label>DELIVERY_ID</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DELIVERY_NAME__c</fullName>
        <description>DELIVERY_NAME</description>
        <externalDeveloperName>DELIVERY_NAME</externalDeveloperName>
        <label>DELIVERY_NAME</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FREIGHT_CARRIER__c</fullName>
        <description>FREIGHT_CARRIER</description>
        <externalDeveloperName>FREIGHT_CARRIER</externalDeveloperName>
        <label>FREIGHT_CARRIER</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>INVOICE_NUMBER__c</fullName>
        <description>INVOICE_NUMBER</description>
        <externalDeveloperName>INVOICE_NUMBER</externalDeveloperName>
        <label>INVOICE_NUMBER</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ITEM_DESCRIPTION__c</fullName>
        <description>ITEM_DESCRIPTION</description>
        <externalDeveloperName>ITEM_DESCRIPTION</externalDeveloperName>
        <label>ITEM_DESCRIPTION</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ITEM_ID__c</fullName>
        <description>ITEM_ID</description>
        <externalDeveloperName>ITEM_ID</externalDeveloperName>
        <label>ITEM_ID</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ITEM_NUMBER__c</fullName>
        <description>ITEM_NUMBER</description>
        <externalDeveloperName>ITEM_NUMBER</externalDeveloperName>
        <label>ITEM_NUMBER</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LINE_ID__c</fullName>
        <description>LINE_ID</description>
        <externalDeveloperName>LINE_ID</externalDeveloperName>
        <label>LINE_ID</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LINE_NUMBER__c</fullName>
        <description>LINE_NUMBER</description>
        <externalDeveloperName>LINE_NUMBER</externalDeveloperName>
        <label>LINE_NUMBER</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LOT_NUMBER__c</fullName>
        <description>LOT_NUMBER</description>
        <externalDeveloperName>LOT_NUMBER</externalDeveloperName>
        <label>LOT_NUMBER</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ORDER_HEADER_ID__c</fullName>
        <description>ORDER_HEADER_ID</description>
        <externalDeveloperName>ORDER_HEADER_ID</externalDeveloperName>
        <label>ORDER_HEADER_ID</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ORDER_NUMBER__c</fullName>
        <description>ORDER_NUMBER</description>
        <externalDeveloperName>ORDER_NUMBER</externalDeveloperName>
        <label>ORDER_NUMBER</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OTM_SHIPMENT_ID__c</fullName>
        <description>OTM_SHIPMENT_ID</description>
        <externalDeveloperName>OTM_SHIPMENT_ID</externalDeveloperName>
        <label>OTM_SHIPMENT_ID</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>REF_PO__c</fullName>
        <description>REF_PO</description>
        <externalDeveloperName>REF_PO</externalDeveloperName>
        <label>REF_PO</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>REQUESTED_QUANTITY_UOM__c</fullName>
        <description>REQUESTED_QUANTITY_UOM</description>
        <externalDeveloperName>REQUESTED_QUANTITY_UOM</externalDeveloperName>
        <label>REQUESTED_QUANTITY_UOM</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>REQUESTED_QUANTITY__c</fullName>
        <description>REQUESTED_QUANTITY</description>
        <externalDeveloperName>REQUESTED_QUANTITY</externalDeveloperName>
        <label>REQUESTED_QUANTITY</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SCHEDULE_SHIP_DATE__c</fullName>
        <description>SCHEDULE_SHIP_DATE</description>
        <externalDeveloperName>SCHEDULE_SHIP_DATE</externalDeveloperName>
        <label>SCHEDULE_SHIP_DATE</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SERIAL_NUMBER__c</fullName>
        <description>SERIAL_NUMBER</description>
        <externalDeveloperName>SERIAL_NUMBER</externalDeveloperName>
        <label>SERIAL_NUMBER</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SHIPPED_QUANTITY_UOM__c</fullName>
        <description>SHIPPED_QUANTITY_UOM</description>
        <externalDeveloperName>SHIPPED_QUANTITY_UOM</externalDeveloperName>
        <label>SHIPPED_QUANTITY_UOM</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SHIPPED_QUANTITY__c</fullName>
        <description>SHIPPED_QUANTITY</description>
        <externalDeveloperName>SHIPPED_QUANTITY</externalDeveloperName>
        <label>SHIPPED_QUANTITY</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SHIP_FROM__c</fullName>
        <description>SHIP_FROM</description>
        <externalDeveloperName>SHIP_FROM</externalDeveloperName>
        <label>SHIP_FROM</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SHIP_METHOD_CODE__c</fullName>
        <description>SHIP_METHOD_CODE</description>
        <externalDeveloperName>SHIP_METHOD_CODE</externalDeveloperName>
        <label>SHIP_METHOD_CODE</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SHIP_TO_LOCATION__c</fullName>
        <description>SHIP_TO_LOCATION</description>
        <externalDeveloperName>SHIP_TO_LOCATION</externalDeveloperName>
        <label>SHIP_TO_LOCATION</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>STATUS__c</fullName>
        <description>STATUS</description>
        <externalDeveloperName>STATUS</externalDeveloperName>
        <label>STATUS</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TRIP_NAME__c</fullName>
        <description>TRIP_NAME</description>
        <externalDeveloperName>TRIP_NAME</externalDeveloperName>
        <label>TRIP_NAME</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WAYBILL__c</fullName>
        <description>WAYBILL</description>
        <externalDeveloperName>WAYBILL</externalDeveloperName>
        <label>WAYBILL</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WEIGHT__c</fullName>
        <description>WEIGHT</description>
        <externalDeveloperName>WEIGHT</externalDeveloperName>
        <label>WEIGHT</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <label>myIfeDeliveries</label>
    <pluralLabel>myIfeDeliveries</pluralLabel>
</CustomObject>